...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/music_search_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/music_search_view"
            style="@style/ThemeSearchView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="false"
            android:hint="@string/hint_search"
            android:visibility="visible"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/error_results" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/music_search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/music_search_list"
            android:paddingTop="@dimen/dimen_8dp"
            android:visibility="@{viewModel.isError() ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
