...
            type="com.shreyas.musicsearch.viewmodel.TrackLyricViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/track_lyric_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/item_horizontal_margin"
        app:cardCornerRadius="@dimen/item_horizontal_margin"
        app:cardUseCompatPadding="true">

...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/track_name"
                tools:text="Pink Floyd" />

            <ScrollView
                android:id="@+id/lyric_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:fadeScrollbars="true"
                android:scrollbars="vertical"
                android:visibility="@{viewModel.isLoading()? View.GONE : View.VISIBLE}"
...
